--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,9 +102,36 @@
     </LinearLayout>
 
 
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_image_slider"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="8dp"
+        android:layout_marginBottom="20sp"
+        >
+
+        <com.denzcoskun.imageslider.ImageSlider
+            android:id="@+id/image_slider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:iss_auto_cycle="true"
+            app:iss_delay="1000"
+            app:iss_period="1000"
+            tools:ignore="MissingClass"
+            />
+
+
+    </androidx.cardview.widget.CardView>
+
+
+
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         >
 
         <LinearLayout
@@ -234,7 +261,8 @@
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:clickable="true"
-                    android:focusable="true" />
+                    android:focusable="true"
+                    />
 
             </LinearLayout>
 
@@ -243,6 +271,8 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="5dp"
                 />
 
 
@@ -261,24 +291,19 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:background="#F4D423"
             app:menu="@menu/menu_item"
             app:itemIconTint="@color/white"
             app:itemTextColor="@color/white"
             app:itemRippleColor="@android:color/transparent"
-            app:itemActiveIndicatorStyle="@null"
-            />
-
+            app:itemActiveIndicatorStyle="@null" />
     </RelativeLayout>
-
 
 
 
